# EPUBNews

./: .env.sample  .gitignore  LICENSE  README.md  constants.py  epub_news.py  exceptions.py  pyproject.toml  requirements.txt  setup.sh  test_file.txt
kindle_news/: kindle_news_stack.py
src/: exceptions.py  handler.py  test.py  tests.py
